package com.alphaharvester.adapter.out.persistence;

import com.alphaharvester.domain.entity.BenchmarkIndex;
import org.springframework.data.r2dbc.repository.R2dbcRepository;
import org.springframework.data.repository.query.ReactiveQueryByExampleExecutor;
import org.springframework.stereotype.Repository;
import reactor.core.publisher.Mono;

import java.util.UUID;

@Repository
public interface BenchmarkIndexRepository extends R2dbcRepository<BenchmarkIndex, UUID>, ReactiveQueryByExampleExecutor<BenchmarkIndex> {
    Mono<BenchmarkIndex> findByTicker(String ticker);
}

